Mostly implemented shield class + texture
Still need to write core collision loop + implement shield/bullet collision check

--- a/project2D/Project2D.vcxproj
+++ b/project2D/Project2D.vcxproj
@@ -93,10 +93,12 @@
     <ClCompile Include="Application2D.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Shield.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application2D.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Shield.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
