Bullet drawing in the player. Bullet updating in the player Messy collision checks in the application. deducts the player's lives and deletes the bullet.

--- a/project2D/Project2D.vcxproj
+++ b/project2D/Project2D.vcxproj
@@ -91,12 +91,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application2D.cpp" />
+    <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Shield.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application2D.h" />
+    <ClInclude Include="Bullet.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Shield.h" />
   </ItemGroup>
