Updated Bullet Now registers itself

--- a/project2D/Project2D.vcxproj
+++ b/project2D/Project2D.vcxproj
@@ -101,6 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application2D.h" />
+    <ClInclude Include="Bullet.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Shield.h" />
   </ItemGroup>
